- Twizy: experimental powermap calculation including region 3 / breakdown torque
  New config:
    xrt [motor_trq_breakdown] = 0     Breakdown torque in Nm, e.g. 210.375
    xrt [motor_rpm_rated] = 0         Rated speed in rpm, e.g. 2100
  See docs/Renault-Twizy/Twizy-Powermap-Calculator-Tbrk.ods for details.
- Add inactivity watchdog timers to CAN buses

2018-10-24 MWJ  3.1.011  OTA release
- Config backup & restore using encrypted ZIP archives
    (AES 256 bit encryption, supported by e.g. 7z)
  New commands:
    config backup <path> [password=module password]
    config restore <path> [password=module password]
- Support custom MAC address (config network mac ...)

2018-08-26 MWJ  3.1.010  OTA release
- TeslaRoadster: Fix for digital speedo bug
- Bluetooth: Improvements towards bluetooth BLE support
- Server v2: Add cabin temperature to "D" message

2018-08-15 MWJ  3.1.009  OTA release
- Tesla Roadster: COOLDOWN command implementation
- Tesla Roadster: Charge Timer support
- Tesla Roadster: Digital Speedo feature implementation
- Tesla Roadster: Refuse to lock a car that is ON
- Server V3: MQTT implementation complete (still experimental beta)
- Mitsubishi iMiev: Basic vehicle support
- CAN: Support LISTEN mode for CAN buses

2018-06-26 MWJ  3.1.008  OTA release
- Vehicle theft alert if vehicle moved more than 500m when parked
- New 'location radius' command to set location radius
- Only issue 'location.enter' and 'location.leave' events if vehicle is ON
- Fix issue with OTA updates in 3.1.007

2018-06-18 MWJ  3.1.007  OTA release
- Logging: auto expire log archive
  New config:
    log [file.keepdays] = 30        0 = disable
  New command:
    log expire [days]               Manual expire
  Note: auto expire is done within hour 0 of day
- Web UI: simplified time zone region selection (vehicle config)
- Web UI: locations editor
- Prefer SPI RAM (on 3.1 hardware) for improved on-chip memory availability

2018-05-20 MWJ  3.1.006  OTA release